--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,19 @@
     font-size: 4vw;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+.swiper {
+    width: 100%;
+    height: 100vh;
 }
 
 section{
     position: relative;
     display: flex;
-    height: 100vh;
+    height: 100%;
+    width: 100%;
     justify-content: center;
     align-items: center;
 }
@@ -47,7 +54,7 @@ section{
     position: relative;
     transform: translateY(150px);
     opacity: 0;
-    transition: 2s all ease;
+    transition: 1.5s all ease;
 }
 
 .reveal.active{
