--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,14 @@
     box-sizing: border-box;
 }
 
+html, body {
+    height: 100vh;
+}
+
 .swiper {
     position: fixed;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh + (100vh - 100%));
 }
 
 section{
