--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,8 @@ html, body {
 .swiper {
     position: fixed;
     width: 100%;
-    height: calc(100vh + (100vh - 100%));
+    height: 100vh;
+    min-height: -webkit-fill-available;
 }
 
 section{
