--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Noto Sans";
-    src: url(assets/fonts/NotoSans-Regular.ttf);
+    src: url(../assets/fonts/NotoSans-Regular.ttf);
 }
 
 :root{
