--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ html, body {
     position: fixed;
     width: 100%;
     height: 100vh;
-    min-height: -webkit-fill-available;
+    height: calc(var(--vh, 1vh) * 100);
 }
 
 section{
