--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,13 @@
     src: url(../assets/fonts/NotoSans-Regular.ttf);
 }
 
-:root{
+:root {
     --main-color: #5403BD;
     --secondary-color: #ee5279;
 }
 
-*{
+* {
     font-family: "Noto Sans";
-    font-size: 4vw;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -27,7 +26,7 @@ html, body {
     height: calc(var(--vh, 1vh) * 100);
 }
 
-section{
+section {
     position: relative;
     display: flex;
     height: 100%;
@@ -36,19 +35,73 @@ section{
     align-items: center;
 }
 
+/************
+*Flex stuff *
+************/
+
+.text-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(51, 51, 51, 0.5);
+    color: white;
+    font-size: 4vw;
+    border-radius: 10px;
+    max-width: 70vw;
+}
+
+.flex-columns {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.flex-rows {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.ab {
+    align-items: baseline;
+}
+
+.as {
+    align-items: flex-start;
+}
+
+.ae {
+    align-items: flex-end;
+}
+
+.jb {
+    justify-content: space-between;
+}
+
+.js {
+    justify-content: flex-start;
+}
+
+.je {
+    justify-content: flex-end;
+}
+
 /******************
 *Background colors*
 ******************/
 
-.dark-bg{
+.dark-bg {
     background-color: #333;
 }
 
-.main-bg{
+.main-bg {
     background-color: var(--main-color);
 }
 
-.secondary-bg{
+.secondary-bg {
     background-color: var(--secondary-color);
 }
 
@@ -56,14 +109,14 @@ section{
 *Reveal animation*
 *****************/
 
-.reveal{
+.reveal {
     position: relative;
     transform: translateY(150px);
     opacity: 0;
     transition: 1.5s all ease;
 }
 
-.reveal.active{
+.reveal.active {
     transform: translateY(0);
     opacity: 1;
 }
@@ -71,7 +124,7 @@ section{
 /*******************
 *Dom specific stuff*
 *******************/
-.presentation-container{
+.presentation-container {
     align-self: flex-start;
     height: 50%;
     display: flex;
@@ -81,7 +134,7 @@ section{
     color: #ddd;
 }
 
-.background-pic{
+.background-pic {
     align-self: flex-end;
     position: absolute;
     max-height: 50%;
