--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ section {
     align-items: center;
     background-color: rgb(51, 51, 51, 0.5);
     color: white;
-    font-size: 4vw;
+    font-size: min(40px, 5vw);
     border-radius: 10px;
     max-width: 70vw;
 }
