--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,10 @@ html, body {
     height: 100vh;
 }
 
-.swiper {
-    position: fixed;
+.full-page {
     width: 100%;
-    height: 100vh;
-    height: calc(var(--vh, 1vh) * 100);
+    min-height: min(100vh, auto);
+    min-height: min(auto, calc(var(--vh, 1vh) * 100));
 }
 
 section {
@@ -46,10 +45,16 @@ section {
     align-items: center;
     background-color: rgb(51, 51, 51, 0.5);
     color: white;
-    font-size: min(40px, 5vw);
+    font-size: 30px;
     border-radius: 10px;
     max-width: 70vw;
     padding: 1vw;
+}
+
+@media screen and (max-width: 550px) {
+    .text-container {
+        max-width: 90 vw;
+    }
 }
 
 .font-small {
@@ -65,6 +70,7 @@ section {
 
 .flex-rows {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
     justify-content: center;
@@ -136,13 +142,11 @@ section {
 
 .reveal {
     position: relative;
-    transform: translateY(150px);
     opacity: 0;
-    transition: 1.5s all ease;
+    transition: 2s all ease;
 }
 
 .reveal.active {
-    transform: translateY(0);
     opacity: 1;
 }
 
