--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,8 @@ html, body {
 
 .full-page {
     width: 100%;
-    min-height: 100vh;
-    min-height: calc(var(--vh, 1vh) * 100);
+    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
 }
 
 .slide {
