--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,14 @@ html, body {
     height: 100vh;
 }
 
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    transform: scale(1.1);
+}
+
 .full-page {
     width: 100%;
     height: 100vh;
@@ -61,7 +69,7 @@ section {
 @media screen and (max-width: 550px) {
     .text-container {
         max-width: 90vw;
-        
+
     }
 }
 
@@ -185,4 +193,27 @@ section {
 
 .big-icon {
     font-size: 8vh;
+}
+
+#scroll-up {
+    position: fixed;
+    display: flex;
+    opacity: 0;
+    justify-content: center;
+    align-items: center;
+    z-index: 99;
+    bottom: 2vh;
+    right: 2vw;
+    height: 7vh;
+    width: 7vh;
+    background-color: rgb(51, 51, 51, 0.5);
+    border: none;
+    padding: 20px;
+    border-radius: 100%;
+    transition: 0.2s;
+}
+
+#scroll-up:hover {
+    background-color: rgb(51, 51, 51, 0.4);
+    cursor: pointer;
 }
